namespace Worker.Sagas.AiBotWorkerOrder.Events;

public record AiBotStartedWorkOrderEvent(Guid SagaId);