namespace Worker.Sagas.AiBotWorkerOrder.Events;

public record AiBotUpdatedWorkerOrderEvent(Guid SagaId);